<resources>
    <string name="app_name">Trivia Music</string>
    <string name="ready">ready</string>
    <string name="round">Round</string>
    <string name="points">Points</string>
    <string name="categories">Choose a Category</string>
    <array name="categories">
        <item>Rock</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Indie/Alternative</item>
        <item>EDM Dance</item>
        <item>RnB</item>
        <item>Country</item>
        <item>Folk Americana</item>
        <item>Soul</item>
        <item>Jazz</item>
        <item>Blues</item>
        <item>HipHop</item>
    </array>
    <string name="rock">Rock</string>
    <string name="metal">Metal</string>
    <string name="pop">Pop</string>
    <string name="indie_alt">Indie/Alternative</string>
    <string name="edm_dance">EDM Dance</string>
    <string name="rnb">RnB</string>
    <string name="country">Country</string>
    <string name="folk_americana">Folk Americana</string>
    <string name="soul">Soul</string>
    <string name="jazz">Jazz</string>
    <string name="hiphop">HipHop</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="forgot_password">forgot password</string>
    <string name="email">email</string>
    <string name="password_repeat">repeat password</string>
    <string name="password_error">passwords do not match</string>
    <string name="password_error_len">min 6 characters</string>
    <string name="email_error">wrong email</string>
    <string name="profile">profile</string>
    <string name="play">play</string>
    <string name="logout">logout</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="record">record</string>
    <string name="score">SCORE</string>
    <string name="ok">ok</string>
    <string name="name">name</string>
    <string name="right">CORRECT</string>


</resources>
