<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile" />

    <Button
        android:text="@string/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play" />

    <Button
        android:text="@string/leaderboards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/leaderboards" />

    <Button
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout" />



</LinearLayout>