<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".login_signup.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="8dp"
                android:padding="0dp"
                card_view:cardBackgroundColor="#f9f9f9"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mainLogo"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        card_view:srcCompat="@drawable/bigplayer" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/mainUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:inputType="textEmailAddress|text"
                            android:padding="10dp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp">

                        <EditText
                            android:id="@+id/mainPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:fontFamily="sans-serif"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="10dp" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/mainLogin"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/mainLoginFacebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="27dp"
                android:text="facebook"
                android:background="@color/blue"
                android:textColor="#ffffff" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/mainSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/signup"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/mainForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>